--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,13 +17,6 @@ jobs:
     - name: Build the Docker image
       run: docker build -t docker_practice .
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Run image to Docker Hub
-      run: |
-        docker run docker_practice
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker run docker_practice
